// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The HundredXClient > should initialise correctly with all config parameters passed for a mainnet setup 1`] = `
HundredXClient {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "chain": 81457,
  "ciaoAddress": "0x0",
  "deposit": [Function],
  "domain": {
    "chainId": 81457n,
    "name": "100x",
    "verifyingContract": "0x0",
    "version": "0.0.0",
  },
  "environment": "mainnet",
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "logs": [
    {
      "msg": "Debug mode enabled",
    },
  ],
  "privateKey": "0xa608cd43cbc3d59bc51443f475b96a4654e956d6cc91783598a8e76a34000174",
  "rpc": "https://test-rpc.quiknode.pro",
  "subAccountId": 2,
  "verifierAddress": "0x0",
  "withdraw": [Function],
}
`;

exports[`The HundredXClient > should initialise correctly with all config parameters passed for a testnet setup 1`] = `
HundredXClient {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "chain": 168587773,
  "ciaoAddress": "0x63bD0ca355Cfc117F5176E5eF3e34A6D60081937",
  "deposit": [Function],
  "domain": {
    "chainId": 168587773n,
    "name": "100x",
    "verifyingContract": "0x65CbB566D1A6E60107c0c7888761de1AdFa1ccC0",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "logs": [
    {
      "msg": "Debug mode enabled",
    },
  ],
  "privateKey": "0xa608cd43cbc3d59bc51443f475b96a4654e956d6cc91783598a8e76a34000174",
  "rpc": "https://test-rpc.quiknode.pro",
  "subAccountId": 2,
  "verifierAddress": "0x65CbB566D1A6E60107c0c7888761de1AdFa1ccC0",
  "withdraw": [Function],
}
`;

exports[`The HundredXClient > should initialise correctly with only required params 1`] = `
HundredXClient {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "chain": 168587773,
  "ciaoAddress": "0x63bD0ca355Cfc117F5176E5eF3e34A6D60081937",
  "deposit": [Function],
  "domain": {
    "chainId": 168587773n,
    "name": "100x",
    "verifyingContract": "0x65CbB566D1A6E60107c0c7888761de1AdFa1ccC0",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "logs": [],
  "privateKey": "0xa608cd43cbc3d59bc51443f475b96a4654e956d6cc91783598a8e76a34000174",
  "rpc": "https://sepolia.blast.io",
  "subAccountId": 1,
  "verifierAddress": "0x65CbB566D1A6E60107c0c7888761de1AdFa1ccC0",
  "withdraw": [Function],
}
`;
